--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+{%load static%}
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Atestados</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'css/css_paginas.css' %}">
 </head>
 
 <body>
@@ -19,7 +25,7 @@
 </div>
 
 <!--Container do formulário de visualização-->
- <div class="container">
+<div class="container">
     <div class="jumbotron col-sm-9 m-auto pt-2 pb-2">
         <form name="form" id="form" action="/view/{{db.id}}" method="post">
             <div class="form-group row">
@@ -53,11 +59,11 @@
                 </div>
             </div>
             {%if db%}
-                <a href="/pesquisa/" class="btn btn-primary">Voltar</a>
-                {%if db.created_by == request.user%}
-                    <a href="/edit/{{db.id}}" class="btn btn-warning">Editar</a>
-                    <a href="/delete/{{db.id}}" class="btn btn-danger btnDel">Excluir</a>
-                {%endif%}
+            <a href="/pesquisa/" class="btn btn-primary">Voltar</a>
+            {%if db.created_by == request.user%}
+            <a href="/edit/{{db.id}}" class="btn btn-warning">Editar</a>
+            <a href="/delete/{{db.id}}" class="btn btn-danger btnDel">Excluir</a>
+            {%endif%}
             {%endif%}
         </form>
     </div>
