--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,13 +16,13 @@
 <!--Barra de navegação-->
 {%include "model-nav.html" %}
 
-<div class="container-fluid my-auto" id="container-home">
-    <div class="row align-items-center no-gutters">
-        <div class="col-md-6 col-12 text-center" id="text-home">
+<div class="container-fluid">
+    <div class="row" id="row-home">
+        <div class="col-md-6 col-lg-6 col-12 align-self-center text-center" id="text-home">
             <h3>Bem-vindo ao site de entrega de atestados!</h3>
             <p>Cadastre seus atestados da empresa aqui</p>
         </div>
-        <div class="col-md-6 col-12" id="carrossel-home">
+        <div class="col-md-6 col-12 align-self-center" id="carrossel-home">
             <div id="carrossel" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carrossel" data-slide-to="0" class="active"></li>
@@ -31,13 +31,25 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block img-fluid" src="{%static 'img/colorful-182220_1920.jpg'%}" alt="First slide">
+                        <img class="d-block" src="{%static 'img/colorful-182220_1920.jpg'%}" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Cadastre seus atestados</h5>
+                            <p>A partir da aba "Cadastro", você poderá adicionar seus atestados ao sistema</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block img-fluid" src="{%static 'img/laptop-3196481_1920.jpg'%}" alt="Second slide">
+                        <img class="d-block" src="{%static 'img/laptop-3196481_1920.jpg'%}" alt="Second slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Administre seus atestados</h5>
+                            <p>A partir da aba "Pesquisa", você terá acesso aos atestados cadastrados, podendo excluí-los e alterá-los</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block img-fluid" src="{%static 'img/office-1209640_1920.jpg'%}" alt="Third slide">
+                        <img class="d-block" src="{%static 'img/office-1209640_1920.jpg'%}" alt="Third slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Segurança</h5>
+                            <p>Apenas você poderá alterar ou excluir seus atestados</p>
+                        </div>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carrossel" role="button" data-slide="prev">
@@ -55,15 +67,15 @@
 </div>
 <script>
     $('.carousel').carousel({
-        interval: 2000
+        interval: 5000
     });
 
     $(function(){
         var altura = $(window).height();
-        var largura = $(window).width();
 
-        $('#container-home').css('height', altura);
-        
+        $('#row-home').css('height', altura);
+        $('#carrossel').css('height', altura);
+        $('.d-block').css('height',altura);
     });
 
 </script>
