Tela dividida e correções na tela de pesquisa

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,8 +16,8 @@
 <!--Barra de navegação-->
 {%include "model-nav.html" %}
 
-<div class="container-fluid">
-    <div class="row" id="row-home">
+<div class="container-fluid no-gutters">
+    <div class="row no-gutters" id="row-home">
         <div class="col-md-6 col-lg-6 col-12 align-self-center text-center" id="text-home">
             <h3>Bem-vindo ao site de entrega de atestados!</h3>
             <p>Cadastre seus atestados da empresa aqui</p>
@@ -31,21 +31,21 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block" src="{%static 'img/colorful-182220_1920.jpg'%}" alt="First slide">
+                        <img class="d-block" id="img1" src="{%static 'img/colorful-182220_1920.jpg'%}" alt="First slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Cadastre seus atestados</h5>
                             <p>A partir da aba "Cadastro", você poderá adicionar seus atestados ao sistema</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block" src="{%static 'img/laptop-3196481_1920.jpg'%}" alt="Second slide">
+                        <img class="d-block" id="img2" src="{%static 'img/laptop-3196481_1920.jpg'%}" alt="Second slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Administre seus atestados</h5>
                             <p>A partir da aba "Pesquisa", você terá acesso aos atestados cadastrados, podendo excluí-los e alterá-los</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block" src="{%static 'img/office-1209640_1920.jpg'%}" alt="Third slide">
+                        <img class="d-block" id="img3" src="{%static 'img/office-1209640_1920.jpg'%}" alt="Third slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Segurança</h5>
                             <p>Apenas você poderá alterar ou excluir seus atestados</p>
@@ -72,10 +72,13 @@
 
     $(function(){
         var altura = $(window).height();
+        var largura = $('#carrossel-home').width();
 
         $('#row-home').css('height', altura);
         $('#carrossel').css('height', altura);
+        $('#carrossel').css('width', largura);
         $('.d-block').css('height',altura);
+        $('.d-block').css('width',largura);
     });
 
 </script>
