--- a/app/static/css/css_paginas.css
+++ b/app/static/css/css_paginas.css
@@ -4,6 +4,6 @@
     border-radius: 0px 0px 10px 10px;
 }
 
-.carousel-item img{
-    background-color: rgba(0, 0, 0, 0.6);
+#img1, #img2, #img3{
+    filter: blur(5px);
 }
