--- a/app/templates/pesquisa.html
+++ b/app/templates/pesquisa.html
@@ -35,7 +35,13 @@
             </div>
             <div class="form-group">
                 <label>Tipo de serviço: </label>
-                <input type="text" name="busca_servico" id="busca_servico" class="form-control">
+                <select name="busca_servico" id="busca_servico" class="form-control">
+                    <option></option>
+                    <option value="Desenvolvimento">Desenvolvimento</option>
+                    <option value="ITS">ITS</option>
+                    <option value="Suporte">Suporte</option>
+                    <option value="Service Desk">Service Desk</option>
+                </select>
             </div>
             <div class="form-group">
                 <label>Cliente: </label>
