Cadastro e pesquisa com data máxima incluída

--- a/app/templates/atestado_form.html
+++ b/app/templates/atestado_form.html
@@ -24,7 +24,7 @@
     </div>
 
     <!-- Formulário cadastro/atualização de atestados -->
-    <main role="main" class="container-fluid">
+    <main role="main" class="container-fluid" onload="dataMaxima()">
         <div class="jumbotron col-lg-5 col-md-12 col-sm-12 m-auto pt-2 pb-2">
             {% if messages %}
                 {% for message in messages %}
