Atualização em 'Visualizar cadastro'

--- a/app/templates/pesquisa.html
+++ b/app/templates/pesquisa.html
@@ -112,7 +112,7 @@
                     <td>{{linhas.empresa}}</td>
                     <td><a href="{{linhas.documento_pdf.url}}" class="btn btn-primary btn-sm" target="_blank">Download PDF</a></td>
                     <td>
-                        <a href="/pesquisa/view/{{linhas.id}}/" class="btn btn-link">Visualizar campo</a>
+                        <a href="/pesquisa/view/{{linhas.id}}/" class="btn btn-link">Visualizar cadastro</a>
                     </td>
                 </tr>
                 {%endfor%}
