--- a/app/templates/pesquisa.html
+++ b/app/templates/pesquisa.html
@@ -96,6 +96,10 @@
                     </div>
                 {%endfor%}
             </div>
+            <div class="form-group">
+                <label for="busca_palavra">Pesquisar em PDF:</label>
+                <input type="text" class="form-control" maxlength="30" placeholder="Palavras a pesquisar..." id="busca_palavra" name="busca_palavra">
+            </div>
             <input type="submit" class="btn btn-success" name="submit" value="Pesquisar">
             <a href="/pesquisa/searchall/" type="submit" class="btn btn-primary">Mostrar tudo</a>
         </form>
