--- a/app/templates/pesquisa.html
+++ b/app/templates/pesquisa.html
@@ -139,7 +139,7 @@
                     <td>{{linhas.data_emissao}}</td>
                     <td>{{linhas.tipo_de_servico}}</td>
                     <td>{{linhas.empresa}}</td>
-                    <td><a href="{{linhas.documento_pdf.url}}" class="btn btn-primary btn-sm" target="_blank">Download PDF</a></td>
+                    <td><a href="{{linhas.documento_pdf.url}}" class="btn btn-primary btn-sm" target="_blank">Visualizar PDF</a></td>
                     <td>
                         <a href="/pesquisa/view/{{linhas.id}}/" class="btn btn-link">Visualizar cadastro</a>
                     </td>
